--- a/Code/index.html
+++ b/Code/index.html
@@ -131,171 +131,248 @@
           </div>
           <div class="clearfix"></div>
         </div>
-        <hr />
-        <div class="fth-section" id="social-proof">
-          <h2>What Our Members Say</h2>
-          <p>
-            Join thousands of satisfied members who have transformed their lives
-            at FitCore
-          </p>
-          <div class="fth-section-cards">
-            <h4>David Martinez</h4>
-            <p class="fth-section-cards-p1">Lost 35 lbs in 5 months</p>
-            <p class="fth-section-cards-p2">
-              "FitCore completely changed my life. The trainers are amazing and
-              the community is so supportive. I've never felt stronger or more
-              confident."
-            </p>
-            <img src="Photos/avatar-1.jpg" alt="1" />
+      </div>
+      <div class="fth-fif-container">
+        <div class="container">
+          <div class="fth-section" id="social-proof">
+            <div class="fth-section-header">
+              <h2>What Our Members Say</h2>
+              <p>
+                Join thousands of satisfied members who have transformed their
+                lives at FitCore
+              </p>
+            </div>
+            <div class="fth-section-content">
+              <div class="fth-section-cards-1">
+                <h4>David Martinez</h4>
+                <p class="fth-section-cards-p1">Lost 35 lbs in 5 months</p>
+                <p class="fth-section-cards-p2">
+                  <span> "FitCore completely changed my life. The </span>
+                  <span> trainers are amazing and the community is</span>
+                  <span> so supportive. I've never felt stronger or </span>
+                  <span> more confident." </span>
+                </p>
+                <img src="Photos/avatar-1.jpg" alt="1" />
+              </div>
+              <div class="fth-section-cards-2">
+                <h4>Mike Chen</h4>
+                <p class="fth-section-cards-p1">Gained 15 lbs muscle</p>
+                <p class="fth-section-cards-p2">
+                  <span> "The equipment is top-notch and always </span>
+                  <span> clean. Being open 24/7 means I can work </span>
+                  <span> out whenever it fits my schedule. Highly </span>
+                  <span> recommend!" </span>
+                </p>
+                <img src="Photos/avatar-2.jpg" alt="1" />
+              </div>
+              <div class="fth-section-cards-3">
+                <h4>James Rodriguez</h4>
+                <p class="fth-section-cards-p1">Marathon finisher</p>
+                <p class="fth-section-cards-p2">
+                  <span> "The personal training sessions helped </span>
+                  <span> me train for my first marathon. The </span>
+                  <span> expertise and motivation from the staff is </span>
+                  <span> unmatched." </span>
+                </p>
+                <img src="Photos/avatar-3.jpg" alt="1" />
+              </div>
+              <div class="clearfix"></div>
+            </div>
           </div>
-          <div class="fth-section-cards">
-            <h4>Mike Chen</h4>
-            <p class="fth-section-cards-p1">Gained 15 lbs muscle</p>
-            <p class="fth-section-cards-p2">
-              "The equipment is top-notch and always clean. Being open 24/7
-              means I can work out whenever it fits my schedule. Highly
-              recommend!"
-            </p>
-            <img src="Photos/avatar-2.jpg" alt="1" />
-          </div>
-          <div class="fth-section-cards">
-            <h4>James Rodriguez</h4>
-            <p class="fth-section-cards-p1">Marathon finisher</p>
-            <p class="fth-section-cards-p2">
-              "The personal training sessions helped me train for my first
-              marathon. The expertise and motivation from the staff is
-              unmatched."
-            </p>
-            <img src="Photos/avatar-3.jpg" alt="1" />
+          <div class="fif-section">
+            <div class="fif-section-contents">
+              <h2>2500+</h2>
+              <p>Active Members</p>
+            </div>
+            <div class="fif-section-contents">
+              <h2>15+</h2>
+              <p>Expert Trainers</p>
+            </div>
+            <div class="fif-section-contents">
+              <h2>50+</h2>
+              <p>Group Classes</p>
+            </div>
+            <div class="fif-section-contents">
+              <h2>24/7</h2>
+              <p>Access Hours</p>
+            </div>
+            <div class="clearfix"></div>
           </div>
         </div>
-        <hr />
-        <div class="fif-section">
-          <div class="fif-section-contents">
-            <h2>2500+</h2>
-            <p>Active Members</p>
-          </div>
-          <div class="fif-section-contents">
-            <h2>15+</h2>
-            <p>Expert Trainers</p>
-          </div>
-          <div class="fif-section-contents">
-            <h2>50+</h2>
-            <p>Group Classes</p>
-          </div>
-          <div class="fif-section-contents">
-            <h2>24/7</h2>
-            <p>Access Hours</p>
-          </div>
-          <div class="clearfix"></div>
-        </div>
-        <hr />
+      </div>
+      <div class="container">
         <div class="sixth-section" id="membership-form">
-          <h2>Ready to Start Your Fitness Journey?</h2>
-          <p>
-            Join FitCore today and get access to premium facilities, expert
-            guidance, and a community that supports your goals.
-          </p>
-        </div>
-        <hr />
-        <div class="form-section">
-          <form>
-            <label for="fname">First Name</label>
-            <input type="text" name="fname" id="fname" />
-            <br />
-            <label for="lname">Last Name</label>
-            <input type="text" name="lname" id="lname" />
-            <br />
-
-            <label for="emailadd">Email Address</label>
-            <input
-              type="email"
-              name="emailadd"
-              id="emailadd"
-              placeholder="your.email@example.com"
-            />
-
-            <br />
-            <label for="telnum">Phone Number</label>
-            <input
-              type="tel"
-              name="telnum"
-              id="telnum"
-              placeholder="(555) 123-4567"
-            />
-
-            <br />
-            <label for="Membership">Membership Type</label>
-            <select name="Membership" id="Membership">
-              <option value="1">Basic Membership - $29/month</option>
-              <option value="2">Premium Membership - $49/month</option>
-              <option value="3">VIP Membership - $79/month</option>
-            </select>
-
-            <br />
-            <label for="Goals">Fitness Goals</label>
-            <textarea
-              type="text"
-              name="Goals"
-              id="Goals"
-              placeholder="Tell us about your fitness goals and what you hope to
-            achieve"
-            ></textarea>
-            <br />
-
-            <button>Join FitCore Today</button>
+          <div class="sixth-section-header">
+            <h2>Ready to Start Your Fitness Journey?</h2>
+          </div>
+          <div class="sixth-section-p">
             <p>
-              By submitting this form, you agree to our terms of service and
-              privacy policy.
+              Join FitCore today and get access to premium facilities, expert
+              guidance,
             </p>
-            <br />
-          </form>
+            <p>and a community that supports your goals.</p>
+          </div>
         </div>
-        <hr />
-        <div class="final-section">
-          <h2>FitCore</h2>
-          <p>
-            Transform your body and mind at our premium fitness facility. Join
-            thousands of members who have achieved their fitness goals with our
-            expert guidance and state-of-the-art equipment.
-          </p>
-          <a href="https://facebook.com/">Facebook</a>
-          <a href="https://instagram.com/">Instagram</a>
-          <a href="https://x.com/">Twitter</a>
-
-          <h4>Quick Links</h4>
-          <ul>
-            <li>
-              <a href="#hero">Home</a>
-            </li>
-            <li>
-              <a href="#whychooseus">Why Choose Us</a>
-            </li>
-            <li>
-              <a href="#social-proof">Reviews</a>
-            </li>
-            <li>
-              <a href="#membership-form">Membership Form</a>
-            </li>
-          </ul>
-
-          <h4>Contact Info</h4>
-          <h5>Address</h5>
-          <p>123 Fitness Street, Downtown City, DC 12345</p>
-          <br />
-          <h5>Phone</h5>
-          <p>(555) 123-4567</p>
-          <br />
-          <h5>Hours</h5>
-          <p>Open 24/7</p>
-          <hr />
-          <p>© 2025 FitCore Gym. All rights reserved.</p>
-          <p></p>
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Service</a>
-          <a href="#">Cookie Policy</a>
+        <div class="form-section-container">
+          <div class="form-section">
+            <form>
+              <div class="form-section-field-1">
+                <div class="names">
+                  <div class="label">
+                    <label for="fname">First Name</label>
+                  </div>
+                  <div class="input">
+                    <input
+                      type="text"
+                      name="fname"
+                      id="fname"
+                      placeholder="Enter your first name"
+                    />
+                  </div>
+                </div>
+                <div class="names">
+                  <div class="label">
+                    <label for="lname">Last Name</label>
+                  </div>
+                  <div class="input">
+                    <input
+                      type="text"
+                      name="lname"
+                      id="lname"
+                      placeholder="Enter your last name"
+                    />
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+              </div>
+              <div class="form-section-field-2">
+                <div class="label">
+                  <label for="emailadd">Email Address</label>
+                </div>
+                <div class="input">
+                  <input
+                    type="email"
+                    name="emailadd"
+                    id="emailadd"
+                    placeholder="your.email@example.com"
+                  />
+                </div>
+              </div>
+              <div class="form-section-field-3">
+                <div class="label">
+                  <label for="telnum">Phone Number</label>
+                </div>
+                <div class="input">
+                  <input
+                    type="tel"
+                    name="telnum"
+                    id="telnum"
+                    placeholder="(555) 123-4567"
+                  />
+                </div>
+              </div>
+              <div class="form-section-field-4">
+                <label for="Membership">Membership Type</label>
+                <select name="Membership" id="Membership">
+                  <option value="1">Basic Membership - $29/month</option>
+                  <option value="2">Premium Membership - $49/month</option>
+                  <option value="3">VIP Membership - $79/month</option>
+                </select>
+              </div>
+              <div class="form-section-field-5">
+                <label for="Goals">Fitness Goals</label>
+                <textarea
+                  type="text"
+                  name="Goals"
+                  id="Goals"
+                  placeholder="Tell us about your fitness goals and what you hope to achieve"
+                ></textarea>
+              </div>
+              <div class="form-section-field-6">
+                <div class="form-section-field-6-b">
+                  <button type="submit">Join FitCore Today</button>
+                </div>
+                <div class="form-section-field-6-p">
+                  <p>
+                    By submitting this form, you agree to our terms of service
+                    and privacy policy.
+                  </p>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
-        <hr />
+      </div>
+
+      <div class="final-section">
+        <div class="final-section-container">
+          <div class="final-section-container-1">
+            <div class="final-section-container-1-col-1">
+              <h2>FitCore</h2>
+              <p>
+                <span>
+                  Transform your body and mind at our premium fitness facility.
+                  Join
+                </span>
+                <span>
+                  thousands of members who have achieved their fitness goal with
+                  our
+                </span>
+                <span> expert guidance and state-of-the-art equipment. </span>
+              </p>
+              <a href="https://facebook.com/">Facebook</a>
+              <a href="https://instagram.com/">Instagram</a>
+              <a href="https://x.com/">Twitter</a>
+            </div>
+            <div class="final-section-container-1-col-2">
+              <div class="final-section-container-1-col-2-h">
+                <h4>Quick Links</h4>
+              </div>
+              <div class="final-section-container-1-col-2-hero">
+                <a href="#hero">Home</a>
+              </div>
+              <div class="final-section-container-1-col-2-wcu">
+                <a href="#whychooseus">Why Choose Us</a>
+              </div>
+              <div class="final-section-container-1-col-2-sp">
+                <a href="#social-proof">Reviews</a>
+              </div>
+              <div class="final-section-container-1-col-2-h-msf">
+                <a href="#membership-form">Membership Form</a>
+              </div>
+            </div>
+            <div class="final-section-container-1-col-3">
+              <div class="final-section-container-1-col-3-h">
+                <h4>Contact Info</h4>
+              </div>
+              <div class="final-section-container-1-col-3-ad">
+                <h5>Address</h5>
+                <p>123 Fitness Street, Downtown City,</p>
+                <p>DC 12345</p>
+              </div>
+              <div class="final-section-container-1-col-3-ph">
+                <h5>Phone</h5>
+                <p>(555) 123-4567</p>
+              </div>
+              <div class="final-section-container-1-col-3-ho">
+                <h5>Hours</h5>
+                <p>Open 24/7</p>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+          <div class="final-section-container-2">
+            <div class="final-section-container-2-col-1">
+              <p>© 2025 FitCore Gym. All rights reserved.</p>
+            </div>
+            <div class="final-section-container-2-col-2">
+              <a href="#">Cookie Policy</a>
+              <a href="#">Terms of Service</a>
+              <a href="#">Privacy Policy</a>
+            </div>
+            <div class="clearfix"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
